2004-09-23  Tom Tromey  <tromey@redhat.com>

	PR java/17380:
	* testsuite/libjava.jacks/jacks.xfail: Added 9.2-implicit-6 and
	9.2-implicit-7.

2004-09-22  Kelley Cook  <kcook@gcc.gnu.org>

	* Makefile.am: Run aclocal with -I ../config
	* acinclude.m4: Delete macros picked up from ../config and tidy.
	(AM_ICONV,AM_LC_MESSAGES, PKG_CHECK_MODULES): Delete.
	* aclocal.m4, configure, Makefile.in, gcj/Makefile.in: Regenerate.
	* include/Makefile.in, testsuite/Makefile.in: Regenerate.

2004-09-22  Kelley Cook  <kcook@gcc.gnu.org>

	* aclocal.m4: Regenerate with aclocal 1.9.2.
	* configure: Regenerate.
	* Makefile.in, gcj/Makefile.in: Regenerate with automake 1.9.2.
	* include/Makefile.in, testsuite/Makefile.in: Likewise.

2004-09-22  David Daney  <ddaney@avtrex.com>

	PR libgcj/17623
	* java/net/URL.java (URL): Copy userInfo from context.
	(getUserInfo): Return cached userInfo if present.

2004-09-22  Tom Tromey  <tromey@redhat.com>

	PR libgcj/6182:
	* mauve-libgcj: Enable java.lang.Character tests.

2004-09-22  Andreas Tobler  <a.tobler@schweiz.ch>

	* Makefile.am (lib_org_ietf_jgss_la_DEPENDENCIES): Add missing
	dependencies.
	(lib_org_ietf_jgss_la_LIBADD): Likewise.
	* Makefile.in: Regenerated.

2004-09-22  Andreas Tobler  <a.tobler@schweiz.ch>

	* configure.ac: Introduce AC_C_BIGENDIAN_CROSS for WORDS_BIGENDIAN.
	* configure: Regenerate.
	* include/config.h.in: Likewise.
	* jni/gtk-peer/gtkpeer.h (SWAPU32): Introduce macro to swap pixels.
	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkImagePainter.c: Moved SWAPU32
	macro to gtkpeer.h.
	* jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_getImagePixels): Convert
	pixels from  0xBBGGRRAA to 0xAARRGGBB only on Little Endian
	architectures.
	* jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c (area_updated):
	Likewise.

2004-09-22  Tom Tromey  <tromey@redhat.com>

	PR libgcj/14446:
	* java/util/zip/GZIPInputStream.java (read): Avoid sign extension
	when comparing CRCs.