@@ -1,5 +1,8 @@
 2004-09-23  Tom Tromey  <tromey@redhat.com>
 
+	PR java/17329:
+	* testsuite/libjava.compile/pr17329.java: New file.
+
 	PR java/17380:
 	* testsuite/libjava.jacks/jacks.xfail: Added 9.2-implicit-6 and
 	9.2-implicit-7.
